tests/errors/lib-sql-not_type.o_0
sql_lib : From lib:sql

test_query : Template sql_lib.offline_query {
	tables : [ { sql_from : "XXX" }, { sql_from : "YYY" } ]
	columns : {
		a : expr.not {
			arg : expr.count {
				args : [ 3 ]
			}
		}
	}
}

value : test_query(provider : sql_lib.sql_providers.sqlite)
